# dice-tables

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  GUI.py  GUI_kivy.py  GUI_tkinter.py  LICENSE  README-dt.md  README.md  README.rst  UI.py  UI2.py  bfntable.py  dev.requirements.txt  dice_class.py  dice_classes.py  dicecarousel.kv  dicestats.py  dicestats_test.py  dicetable.kv  dicetable.py  dicetablewide.kv  doctest_runner.sh  doctests.py  experiment.py  graphing_and_printing.py  kivy_carousel.py  lim_test.py  longintmath.py  longintmath_test.py  longinttable.py  multiple-dice-class.py  multiple_dice_class.py  other_dicetables.py  prototype_kivy_tabbed.py  prototype_kivy_wide.py  prototype_tkinter.py  (+6 more)
dicetables/: __init__.py  additiveevents.py  baseevents.py  bestof_scratch.py  bestworstmid.py  diceevents.py  dicepool.py  dicepool_collection.py  dicepoolalt.py  dicerecord.py  dicestats.py  dicetable.py  dieevents.py  eventsfactory.py  eventsinfo.py  graphing_and_printing.py  indexedvalues.py  longintmath.py  new_parser.py  parser.py  roller.py  tableinfo.py
docs/: Makefile  conf.py  events_info.rst  index.rst  intro.rst  requirements.txt  roller.rst  the_basics.rst  the_dice.rst  the_dicetable.rst
prototypes/: dicetabletabbed.kv  dicetablewide.kv  prototype_kivy_tabbed.py  prototype_kivy_wide.py  prototype_tkinter.py  prototypes_readme.txt  ui_text_only.py
tests/: dicestats_test.py  longintmath_test.py  tableinfo_test.py  test_additiveevents.py  test_baseevents.py  test_bestworstmid.py  test_diceevents.py  (+18 more)
(+72 files in other folders)
